# EOD-Detector-Simulator

./: .gitignore  C4_STABILITY.md  ELECTRODES.md  FUTURE.md  README.md  pyproject.toml
KiCad/: EOD_Detector_v3-1.cir  EOD_Detector_v3-1.kicad_sch
circuits/: ina333_bench.cir  ina333_bench_ti.cir
circuits/models/: MCP6561.md  README.md  TI_MODEL.md  ina333_ideal.sub  ina333_ti.lib  mcp6561.lib
circuits/stages/: README.md
circuits/stages/00_sanity_ina333/: README.md  bench_ideal.cir  bench_ti.cir
circuits/stages/00_sanity_mcp6561/: README.md  bench.cir
circuits/stages/01_passives/: README.md  bench.cir
circuits/stages/02_frontend/: README.md  bench_ideal.cir  bench_ti.cir
circuits/stages/03_detector/: README.md  bench_ideal.cir  bench_ti.cir
circuits/stages/_template/: README.md  bench.cir.template
circuits/stages/includes/: eod_comparator.inc  eod_comparator_behavioral.inc  eod_comparator_ti.inc  eod_ina333_ideal.inc  eod_ina333_ti.inc  eod_output_filter.inc  eod_passives.inc  eod_stimulus.inc  power.inc  (+1 more)
data/recorded/: EOD_row_02.csv
scripts/: process_recorded_pulse.py  run_gui.py  run_ina333.py  run_stage.py
src/eod_sim/: __init__.py  comparator_network.py  constants.py  input_network.py  ngspice.py  plot.py  recorded_pulse.py  results.py  runner.py  validation.py  waveforms.py
tests/: test_comparator_network.py  test_gui_state.py  test_gui_views.py  test_input_network.py  test_integration_ngspice.py  test_ngspice.py  test_plot.py  test_recorded_pulse.py  test_results.py  test_stages.py  test_validation.py  test_waveforms.py
(+20 files in other folders)
