[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eod-sim"
version = "0.1.0"
description = "EOD detector front-end simulation with ngspice and Python visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "plotly",
    "dash",
    "PyLTSpice",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end ngspice simulation tests (slow; requires ngspice)",
]
